Fix editmode tooltips word wrap

--- a/sources/stylesheets/_general.scss
+++ b/sources/stylesheets/_general.scss
@@ -59,12 +59,11 @@ main {
     opacity: 0;
     transition: opacity .3s ease-in-out;
     padding: 8px;
-    width: fit-content;
+    width: max-content;
     position: absolute;
     top: -40px;
     background: $black;
     color: $white;
-    text-wrap: nowrap;
     font-size: 12px;
     font-weight: $normal-weight;
     border-radius: 4px;
