--- a/stylesheets/main.css
+++ b/stylesheets/main.css
@@ -30,13 +30,12 @@
   opacity: 0;
   transition: opacity 0.3s ease-in-out;
   padding: 8px;
-  width: -moz-fit-content;
-  width: fit-content;
+  width: -moz-max-content;
+  width: max-content;
   position: absolute;
   top: -32px;
   background: #000000;
   color: #FFFFFF;
-  text-wrap: nowrap;
   font-size: 12px;
   font-weight: 400;
   border-radius: 4px;
@@ -1185,14 +1184,13 @@ h4 {
   opacity: 0;
   transition: opacity 0.3s ease-in-out;
   padding: 8px;
-  width: -moz-fit-content;
-  width: fit-content;
+  width: -moz-max-content;
+  width: max-content;
   position: absolute;
   top: -32px;
   left: 0;
   background: #000000;
   color: #FFFFFF;
-  text-wrap: nowrap;
   font-size: 12px;
   font-weight: 400;
   border-radius: 4px;
@@ -2604,13 +2602,12 @@ main {
   opacity: 0;
   transition: opacity 0.3s ease-in-out;
   padding: 8px;
-  width: -moz-fit-content;
-  width: fit-content;
+  width: -moz-max-content;
+  width: max-content;
   position: absolute;
   top: -40px;
   background: #000000;
   color: #FFFFFF;
-  text-wrap: nowrap;
   font-size: 12px;
   font-weight: 400;
   border-radius: 4px;
